[package]
name = "asyncnsq"
version = "0.1.0"
authors = ["linziyan <aohan237@gmail.com>"]
edition = "2018"
description = "async client for nsq"
keywords = ["async", "nsq", "client"]
license = "MIT"
homepage = "https://crates.io/crates/asyncnsq"
documentation = "https://docs.rs/asyncnsq"
readme = "README.md"
doc = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "integrations_test"
path = "tests/integrations_test.rs"


[dependencies]
bytes = "0.4.12"
serde_json = "1.0.41"
byteorder = "1.3.2"
hex = "0.4.0"
serde =  { version = "1.0", features = ["derive"] }
surf = "1.0.3"
async-trait = "0.1.21"
toml = "0.5.5"
[dependencies.async-std]
version = "1.4.0"
features = ["attributes","unstable"]

